# accmath

./: CMakeLists.txt  LICENSE  README.md  asm1  asm2  default  dsp  math-library  simd
src/: accmath.h  main.c
src/backends/: impl_asm_arm64_v1.s  impl_asm_arm64_v2.s  impl_default.c  impl_simd.m  impl_vdsp.m
